[virtualenvs]
in-project = true

[tool.poetry]
name = "ca-server"
version = "0.3.11"
description = "Quickly create Certificate Authorities (CAs) for your applications."
authors = ["shina-m <shina.ct@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.119.0"
jinja2 = "^3.1.6"
uvicorn = "^0.37.0"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
requests = "^2.32.5"
fastapi-utils = "^0.8.0"
python-dotenv = "^1.1.1"
peewee = "^3.18.2"
bcrypt = "^5.0.0"
cryptography = "^46.0.2"
greenlet = "^3.2.4"
pydantic = "^2.12.0"
certifi = "^2025.10.5"
idna = "^3.11"
sniffio = "^1.3.1"
anyio = "^4.11.0"
pycparser = "^2.23"
cffi = "^2.0.0"
charset-normalizer = "^3.4.3"

[tool.group.dev.dependencies]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
