[virtualenvs]
in-project = true

[tool.poetry]
name = "ca-server"
version = "0.3.11"
description = "Quickly create Certificate Authorities (CAs) for your applications."
authors = ["shina-m <shina.ct@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.5"
jinja2 = "^3.1.6"
uvicorn = "^0.40.0"
python-multipart = "^0.0.22"
aiofiles = "^25.1.0"
requests = "^2.32.5"
fastapi-utils = "^0.8.0"
python-dotenv = "^1.2.1"
peewee = "^3.19.0"
bcrypt = "^5.0.0"
cryptography = "^46.0.4"
greenlet = "^3.3.1"

[tool.group.dev.dependencies]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
